--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 <center><a href="info.html">MORE INFO</a></center>
 </div>
 <p><a href="index.html">Back</a></p>
-<form action="index.html" method="post">
+<form action="index.html" method="get">
 <div class="center">
 <h1><center>User Login</center></h1>
 <h3>
