--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@ background-color:orange;
 </div>
 <p><a href="index.html">Back</a></p>
 <h1><center>Please enter the following details to signup</center></h1><br>
-<form method="post" action="res.html">
+<form method="get" action="res.html">
 <fieldset>
 <h3>
 <div class="head">
