--- a/enquiry.html
+++ b/enquiry.html
@@ -25,7 +25,7 @@
 </div>
 <a href="index.html">Back</a>
 <h1><center>Enquiry Form</center></h1><br>
-<form method="post" action="res1.html">
+<form method="get" action="res1.html">
 <fieldset>
 <h3>
 Full Name:
