--- a/feedback.html
+++ b/feedback.html
@@ -31,7 +31,7 @@ color:white;
 <a href="index.html">Back</a>
 <h1><center>Feedback Form</center></h1><br>
 <p>We would love to hear your thoughts,concerns or problem with anything so we can improve!</p>
-<form method="post" action="res2.html">
+<form method="get" action="res2.html">
 <fieldset>
 <h3>
 Full Name:
