--- a/booking.html
+++ b/booking.html
@@ -24,7 +24,7 @@
 </div>
 <p><a href="index.html">Back</a></p>
 <h1><center>Please enter the following details to book</center></h1><br>
-<form action="res3.html" method="post">
+<form action="res3.html" method="get">
 <fieldset>
 <h3>
 Choose a hotel:<span style="width:110px"></span>
